<resources>
    <string name="CHANGE_COLOR_KEY">CHANGE_COLOR</string>
    <string name="COLOR_ACCENT_KEY">COLOR_ACCENT</string>
    <string name="FORCE_DARK_KEY">FORCE_DARK</string>
    <string name="HIGH_PRIORITY_NOTIFICATION_KEY">HIGH_PRIORITY_NOTIFICATION_KEY</string>
    <string name="MOPUB_INITIALIZED">MOPUB_INITIALIZED</string>
    <string name="MediaControlView_ad_remaining_time">Ad · %1$s remaining</string>
    <string name="MediaControlView_ad_skip_wait_time">You can skip Ad in %1$ds</string>
    <string name="MediaControlView_ad_text">Visit Advertiser</string>
    <string name="MediaControlView_audio_track_none_text">None</string>
    <string name="MediaControlView_audio_track_number_text">Track %1$d</string>
    <string name="MediaControlView_audio_track_text">Audio track</string>
    <string name="MediaControlView_custom_playback_speed_text">%1$.2fx</string>
    <string name="MediaControlView_playback_speed_normal">Normal</string>
    <string name="MediaControlView_playback_speed_text">Playback speed</string>
    <string name="MediaControlView_subtitle_off_text">Off</string>
    <string name="MediaControlView_subtitle_track_number_and_lang_text">Track %1$d - %2$s</string>
    <string name="MediaControlView_subtitle_track_number_text">Track %1$d</string>
    <string name="MediaControlView_time_placeholder">00:00:00</string>
    <string name="MediaControlView_video_quality_auto_text">Auto</string>
    <string name="NOTIFICATION_ENABLED_KEY">NOTIFICATION_ENABLED_KEY</string>
    <string name="PERSONALIZED_ADS_KEY">PERSONALIZED_ADS</string>
    <string name="PHONE_SUPPORTED_KEY">PHONE_SUPPORTED_KEY</string>
    <string name="SUPPORTER_PACK_KEY">SUPPORTER_PACK</string>
    <string name="TIMED_DAY_MODE">TIMED_DAY_MODE</string>
    <string name="TIMED_NIGHT_MODE">TIMED_NIGHT_MODE</string>
    <string name="TIMED_NIGHT_MODE_ACTIVE">TIMED_NIGHT_MODE_ACTIVE</string>
    <string name="_1">1.</string>
    <string name="_2">2.</string>
    <string name="_3">3.</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="activate_time_switch">Activate Time Switch</string>
    <string name="app_name">Dark Mode</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="applovin_instructions_dialog_title">Instructions</string>
    <string name="applovin_list_item_image_description">Displays more info about the list item.</string>
    <string name="auto_mode">Auto Mode</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="buy_for">Buy for %1$s</string>
    <string name="buy_premium_to_unlock_this_option">Buy Premium to unlock this option</string>
    <string name="car_mode_activated">The Car Mode was activated.</string>
    <string name="change_the_color_accent">Change Button Color</string>
    <string name="changing_the_mode_failed">Your phone does not support the Android night mode.</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="check_your_system_settings">Give it a try and check your system settings:</string>
    <string name="chip_action_required">Action required</string>
    <string name="chip_read_guide">Read guide</string>
    <string name="chip_supported">Supported</string>
    <string name="chip_text">Chip text</string>
    <string name="choose_amount_of_money">Choose the amount of money you would like to pay.</string>
    <string name="choose_your_favourite_color">Choose your favourite color</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="click_here_for_more_information">Click here for more information.</string>
    <string name="click_here_to_resolve_this_issue">Click here to resolve this issue.</string>
    <string name="com_mopub_nativeads_sponsored_by">Sponsored by %s</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="copy_right_notice">Copyright © 2019-2020, Julian Eggers. All rights reserved.</string>
    <string name="dark_mode_is_enabled_what_now">Dark Mode is enabled. What next?</string>
    <string name="dark_mode_toggle_in_system_settings">In some cases, phone manufacturers have added a dark mode toggle into the system settings.</string>
    <string name="does_not_work_error_explanation">"Some phone manufacturers have deactivated or changed the behavior of the Android dark mode on their devices. Because of this, the Dark Mode app can't activate the dark mode on your phone."</string>
    <string name="example">Google Maps, for example, will start with a mostly black or white loading screen depending on the setting you choose.</string>
    <string name="explanation_color_accent">Customize the color of the buttons in this app</string>
    <string name="explanation_faq">The FAQ answers the most commonly asked questions.</string>
    <string name="faq">FAQ</string>
    <string name="get_premium">Get Premium</string>
    <string name="good_for_battery">Your battery lasts longer.</string>
    <string name="good_for_eyes">Your eyes may relax.</string>
    <string name="google_billing_connection_error_message">Google Billing Services cannot be reached, please try again later.</string>
    <string name="header_example">Example</string>
    <string name="how_dark_mode_works">How it works</string>
    <string name="how_does_this_app_work">How does this app work?</string>
    <string name="info_auto">The option Auto is time-sensitive and automatically activates the dark mode in the evening. Some phone manufacturers have modified the Auto option, resulting in different behavior.</string>
    <string name="info_dark_mode_app">This app allows you to configure the Android DayNight theme settings. These settings are sometimes not accessible via the system settings. Changing these settings only affects apps that support the Android DayNight theme. Popular examples include most Google apps or Instagram.</string>
    <string name="legal">Legal</string>
    <string name="location_android_10">Possible location on Android 10</string>
    <string name="location_android_8_oreo">Possible location on Android 8 (Oreo)</string>
    <string name="location_android_9_pie">Possible location on Android 9 (Pie)</string>
    <string name="no_need_to_wait">"You don't have to wait for Android 10 to get the dark mode!"</string>
    <string name="notification_priority">High Priority Notification</string>
    <string name="notification_priority_description">Displays the notification above others and adds an icon to the notification bar.</string>
    <string name="notification_settings">Notification</string>
    <string name="now_that_the_dark_mode_is_enabled_you_will_have_several_benefits">Now that the dark mode is enabled, you will have several benefits:</string>
    <string name="one_time_payment">"Purchasing Premium is a one-time payment: You won't be charged a second time."</string>
    <string name="open_settings">Open Settings</string>
    <string name="pay_what_you_want">Pay What You Want</string>
    <string name="personalized_ads">Show personalized ads</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="purchase">Purchase</string>
    <string name="question_other_option">Is there another option to activate the dark mode?</string>
    <string name="question_what_went_wrong">What went wrong?</string>
    <string name="removes_ads">Remove ads</string>
    <string name="same_content">All three options unlock the same content. Choose how much Premium is worth to you.</string>
    <string name="settings_customization_tone">Settings -> Customization -> Tone</string>
    <string name="settings_display_advanced_device_theme">Settings -> Display -> Advanced -> Device Theme</string>
    <string name="settings_display_dark_theme">Settings -> Display -> Dark Theme</string>
    <string name="settings_system_developer_options_night_mode">Settings -> System -> Developer options -> Night mode</string>
    <string name="something_does_not_work">Something does not work?</string>
    <string name="supported_apps">Supported Apps</string>
    <string name="supported_apps_list">Check out the list of apps that are known to support Dark Mode.</string>
    <string name="terms_and_conditions">Terms &amp; Conditions</string>
    <string name="thank_you_for_purchasing">Thank you for purchasing Premium.</string>
    <string name="title_activity_contributors">Contributors</string>
    <string name="title_activity_imprint">Impressum</string>
    <string name="try_faq">Learn more about this and similar issues in the FAQ.</string>
    <string name="unlock_notification">Unlock notification for switching modes</string>
    <string name="unlock_quick_settings_tile">Unlock quick settings tile for notification drawer</string>
    <string name="unlock_widget">Unlock widgets for your home screen</string>
    <string name="which_apps_are_dark_now">Which apps are dark now?</string>
</resources>