<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.appbar.MaterialToolbar android:id="@id/toolbar" app:navigationIcon="?homeAsUpIndicator" style="@style/Widget.DarkMode.Toolbar" />
    <ScrollView android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:layout_gravity="center_horizontal" android:orientation="vertical" android:padding="@dimen/border_spacing" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <com.google.android.material.textview.MaterialTextView android:text="@string/dark_mode_is_enabled_what_now" style="@style/Widget.Darkmode.Text.Headline" />
            <com.google.android.material.textview.MaterialTextView android:text="@string/now_that_the_dark_mode_is_enabled_you_will_have_several_benefits" style="@style/Widget.Darkmode.Text.Content" />
            <LinearLayout android:orientation="vertical" android:paddingLeft="16.0dip" android:paddingRight="16.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:paddingStart="16.0dip" android:paddingEnd="16.0dip">
                <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <com.google.android.material.textview.MaterialTextView android:text="@string/_1" style="@style/Widget.Darkmode.Text.Content" />
                    <com.google.android.material.textview.MaterialTextView android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" android:text="@string/good_for_eyes" style="@style/Widget.Darkmode.Text.Content" />
                </LinearLayout>
                <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <com.google.android.material.textview.MaterialTextView android:text="@string/_2" style="@style/Widget.Darkmode.Text.Content" />
                    <com.google.android.material.textview.MaterialTextView android:text="@string/good_for_battery" style="@style/Widget.Darkmode.Text.Content" />
                </LinearLayout>
                <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <com.google.android.material.textview.MaterialTextView android:text="@string/_3" style="@style/Widget.Darkmode.Text.Content" />
                    <com.google.android.material.textview.MaterialTextView android:text="@string/no_need_to_wait" style="@style/Widget.Darkmode.Text.Content" />
                </LinearLayout>
            </LinearLayout>
            <com.google.android.material.button.MaterialButton android:id="@id/how_dark_mode_works_button" android:text="@string/how_dark_mode_works" style="@style/Widget.DarkMode.Button" />
            <com.google.android.material.textview.MaterialTextView android:text="@string/which_apps_are_dark_now" style="@style/Widget.Darkmode.Text.Headline" />
            <com.google.android.material.textview.MaterialTextView android:text="@string/supported_apps_list" style="@style/Widget.Darkmode.Text.Content" />
            <com.google.android.material.button.MaterialButton android:id="@id/supported_apps_button" android:text="@string/supported_apps" style="@style/Widget.DarkMode.Button" />
            <com.google.android.material.textview.MaterialTextView android:text="@string/something_does_not_work" style="@style/Widget.Darkmode.Text.Headline" />
            <com.google.android.material.textview.MaterialTextView android:text="@string/explanation_faq" style="@style/Widget.Darkmode.Text.Content" />
            <com.google.android.material.button.MaterialButton android:id="@id/open_faq_button" android:text="@string/faq" style="@style/Widget.DarkMode.Button" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>