<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" style="@style/Theme.DarkMode.Blue"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.appbar.MaterialToolbar android:id="@id/toolbar" app:navigationIcon="?homeAsUpIndicator" style="@style/Widget.DarkMode.Toolbar" />
    <ScrollView android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:layout_gravity="center_horizontal" android:orientation="vertical" android:padding="@dimen/border_spacing" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <com.google.android.material.textview.MaterialTextView android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" android:layout_gravity="center" android:id="@id/title" android:paddingTop="8.0dip" android:layout_marginBottom="-12.0dip" android:text="@string/get_premium" style="@style/Widget.Darkmode.Text" />
            <com.google.android.material.textview.MaterialTextView android:textAppearance="@style/TextAppearance.MaterialComponents.Overline" android:layout_gravity="center" android:layout_marginBottom="16.0dip" android:text="@string/pay_what_you_want" style="@style/Widget.Darkmode.Text" />
            <LinearLayout android:orientation="vertical" android:paddingLeft="16.0dip" android:paddingRight="16.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:paddingStart="16.0dip" android:paddingEnd="16.0dip">
                <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <androidx.appcompat.widget.AppCompatImageView android:padding="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" app:srcCompat="@drawable/ic_check_green_24dp" />
                    <com.google.android.material.textview.MaterialTextView android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" android:text="@string/removes_ads" style="@style/Widget.Darkmode.Text" />
                </LinearLayout>
                <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <androidx.appcompat.widget.AppCompatImageView android:padding="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" app:srcCompat="@drawable/ic_check_green_24dp" />
                    <com.google.android.material.textview.MaterialTextView android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" android:text="@string/unlock_widget" style="@style/Widget.Darkmode.Text" />
                </LinearLayout>
                <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <androidx.appcompat.widget.AppCompatImageView android:padding="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" app:srcCompat="@drawable/ic_check_green_24dp" />
                    <com.google.android.material.textview.MaterialTextView android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" android:text="@string/unlock_quick_settings_tile" style="@style/Widget.Darkmode.Text" />
                </LinearLayout>
                <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <androidx.appcompat.widget.AppCompatImageView android:padding="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" app:srcCompat="@drawable/ic_check_green_24dp" />
                    <com.google.android.material.textview.MaterialTextView android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" android:text="@string/unlock_notification" style="@style/Widget.Darkmode.Text" />
                </LinearLayout>
                <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <androidx.appcompat.widget.AppCompatImageView android:padding="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" app:srcCompat="@drawable/ic_check_green_24dp" />
                    <com.google.android.material.textview.MaterialTextView android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" android:text="@string/explanation_color_accent" style="@style/Widget.Darkmode.Text" />
                </LinearLayout>
            </LinearLayout>
            <com.google.android.material.textview.MaterialTextView android:layout_gravity="center" android:id="@id/thank_you_message" android:visibility="gone" android:layout_marginTop="32.0dip" android:text="@string/thank_you_for_purchasing" style="@style/Widget.Darkmode.Text.Content" />
            <com.google.android.material.textview.MaterialTextView android:id="@id/connection_error_message" android:visibility="gone" android:layout_marginTop="8.0dip" android:maxWidth="@dimen/max_width" android:text="@string/google_billing_connection_error_message" style="@style/Widget.Darkmode.Text.Content" />
            <com.google.android.material.textview.MaterialTextView android:id="@id/one_time_payment" android:visibility="gone" android:layout_marginTop="8.0dip" android:text="@string/one_time_payment" style="@style/Widget.Darkmode.Text.Content" />
            <com.google.android.material.textview.MaterialTextView android:id="@id/choose_amount_message" android:visibility="gone" android:text="@string/choose_amount_of_money" style="@style/Widget.Darkmode.Text.Content" />
            <RadioGroup android:layout_gravity="center" android:id="@id/buy_radio_group" android:padding="8.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="170.0dip">
                <com.google.android.material.radiobutton.MaterialRadioButton android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" android:textColor="@color/primaryTextColor" android:id="@id/radioButton1" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                <com.google.android.material.radiobutton.MaterialRadioButton android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" android:textColor="@color/primaryTextColor" android:id="@id/radioButton2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:checked="true" />
                <com.google.android.material.radiobutton.MaterialRadioButton android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" android:textColor="@color/primaryTextColor" android:id="@id/radioButton3" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            </RadioGroup>
            <com.google.android.material.textview.MaterialTextView android:id="@id/same_content" android:visibility="gone" android:text="@string/same_content" style="@style/Widget.Darkmode.Text.Content" />
            <com.google.android.material.button.MaterialButton android:id="@id/buy_button" android:visibility="gone" android:text="@string/purchase" style="@style/Widget.DarkMode.Button" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>